--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "kiitos.heartbank.org",
   "version": "0.0.1",
   "description": "HeartBank Blockchain",
-  "main": "index.js",
+  "main": "Block.js",
+  "type": "module", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
